# fws

./: .gitignore
KiCad/fws/: fp-lib-table  fws.kicad_pcb  fws.kicad_pro  fws.kicad_sch  sym-lib-table  ~fws.kicad_sch.lck
KiCad/lib/: fws.kicad_sym
KiCad/lib/fws.3dshapes/: SM03B-SRSS-TB_LF__SN_.step  SM03B-SRSS-TB_LF__SN_.wrl
KiCad/lib/fws.pretty/: QFN-56-1EP_7x7mm_P0.4mm_EP3.2x3.2mm_ThermalVias.kicad_mod  SM03B-SRSS-TB_LF__SN_.kicad_mod  s13131-1536.kicad_mod
KiCad/s13131_breakout/: s13131_breakout.kicad_pcb  s13131_breakout.kicad_pro  s13131_breakout.kicad_sch
mac/FWS/FWS/: AppDelegate.swift  Serial.swift
mac/FWS/FWS.xcodeproj/: project.pbxproj
mac/FWS/FWS/Base.lproj/: MainMenu.xib
pico/: CMakeLists.txt  images.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
